[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "toolset4tube"
version = "0.1.0"
description = "Local YouTube playlist evidence collector for AI-assisted curation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toolset4tube = "toolset4tube.cli:main"

[tool.setuptools.packages.find]
include = ["toolset4tube*"]
